correct display for thumbnails on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -242,6 +242,11 @@ $circle_size: 100px;
     margin: 0 1em 1em 0;
     display: block;
 
+    @include media-query($on-palm) {
+      width: 80vh;
+      margin: 1em auto;
+    }
+
     img {
       max-width: 100%;
       height: 300px
